[tool.poetry]
name = "pypicloud-firestore"
version = "0.1.0"
description = "pypicloud cache implemetation for Firestore"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-firestore = ">=1.8.0"

[tool.poetry.dev-dependencies]
pypicloud = {extras = ["server"], version = "^1.1.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
